# bedrock

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.claude/skills/bhyve/: SKILL.md
.claude/skills/determ-analysis/: SKILL.md
.claude/skills/linux/: SKILL.md
.claude/skills/sdm/: SKILL.md  pdfpage.sh
.github/: runs-on.yml
.github/workflows/: ci.yml  integration-tests.yml  nix.yml  userland-tests.yml
crates/bedrock/: Kbuild  Makefile  adaptive_instruction_counter.rs  bedrock.mod.c  bedrock_main.rs  c_helpers.rs  cow_store.rs  ept  factory.rs  helpers.c  instruction_counter.rs  log  machine.rs  memory  page.rs  pebs_instruction_counter.rs  vmcs.rs  vmx  vmx_asm.rs  vmx_support.S  vmxon.rs
crates/bedrock-assertions/src/: assertion.rs  condition.rs  lib.rs  macros.rs
crates/bedrock-cli/: Cargo.toml
crates/bedrock-cli/src/: args.rs  elf.rs  main.rs  msr.rs
crates/bedrock-determinism-tests/: Cargo.toml
crates/bedrock-ept/: Cargo.toml
crates/bedrock-ept/src/: compat.rs  entry.rs  lib.rs  mod.rs  table.rs  tests.rs  traits.rs
crates/bedrock-fault-injector/: Cargo.toml
crates/bedrock-fault-injector/src/: client.rs  main.rs  nft.rs  podman.rs  protocol.rs  server.rs  util.rs
crates/bedrock-lab/: Cargo.toml
crates/bedrock-lab/examples/: lab_branching.rs  lab_random_drivers.rs
crates/bedrock-lab/src/: bash.rs  branch.rs  checkpoint.rs  event.rs  inner.rs  lib.rs  rng.rs  tree.rs
crates/bedrock-log/: Cargo.toml  build.rs
crates/bedrock-log/src/: lib.rs  macros.rs  mod.rs
crates/bedrock-memory/: Cargo.toml
crates/bedrock-memory/src/: addr.rs  lib.rs  mod.rs  tests.rs
crates/bedrock-vm/: Cargo.toml
crates/bedrock-vm/src/: builder.rs  error.rs  lib.rs  logging.rs  logging_tests.rs  rdrand.rs  registers.rs
crates/bedrock-vm/src/boot/: constants.rs  gdt.rs  linux.rs  mod.rs  mptable.rs  page_tables.rs  params.rs  regs.rs
crates/bedrock-vm/src/vm/: config.rs  exit.rs  ioctl.rs  mod.rs  serial.rs  stats.rs  vm_tests.rs
crates/bedrock-vmx/: Cargo.toml
crates/bedrock-vmx/src/: compat.rs  cow.rs  decoder.rs  decoder_tests.rs  fields.rs  handler.rs  handler_tests.rs  host.rs  hypercalls.rs  lib.rs  mod.rs  prelude.rs  test_mocks.rs  tests.rs  timing.rs  vm_state.rs
crates/bedrock-vmx/src/devices/: apic.rs  ioapic.rs  mod.rs  mtrr.rs  random.rs  random_tests.rs  rdrand.rs  rdrand_tests.rs  rtc.rs  serial.rs
crates/bedrock-vmx/src/exits/: apic.rs  cpuid.rs  cr.rs  ept.rs  helpers.rs  interrupts.rs  io.rs  misc.rs  mod.rs  msr.rs  pebs.rs  qualifications.rs  rdrand.rs  rdrand_tests.rs  reasons.rs  time.rs  time_tests.rs  vmcall.rs
crates/bedrock-vmx/src/logging/: entry.rs  entry_tests.rs  hash.rs  mod.rs
crates/bedrock-vmx/src/registers/: cr.rs  descriptor.rs  dr.rs  gpr.rs  guest.rs  mod.rs  msr_defs.rs  segment.rs  syscall.rs  xcr.rs
crates/bedrock-vmx/src/traits/: allocator.rs  capabilities.rs  context.rs  controls.rs  device_state.rs  errors.rs  instruction_counter.rs  instruction_counter_tests.rs  kernel.rs  machine.rs  mod.rs  page.rs  registers.rs  vm_run.rs  vmcs.rs  vmx.rs  vmx_context.rs  vpid.rs  vpid_tests.rs
crates/bedrock-vmx/src/vm/: forked.rs  mod.rs  root.rs  traits.rs
crates/bedrock-workload-monitor/: Cargo.toml
crates/bedrock-workload-monitor/src/: main.rs
crates/bedrock/vm_file/: core.rs  fd.rs  forked.rs  handlers.rs  mod.rs  root.rs  structs.rs
crates/flux/: Cargo.toml  README.md
crates/flux/src/: affinity.rs  bytemut.rs  campaign.rs  corpus.rs  coverage.rs  http.rs  input.rs  lib.rs  mutate.rs  rng.rs  shape.rs  sink.rs  ui.rs  views.rs
crates/flux/web/: index.html
guest/: init
guest-patches/: 0004-random-source-urandom-getrandom-from-rdrand.patch  0004-random-source-urandom-getrandom-from-vmcall.patch
guest/scx-fuzz/: crun-shim.c  scx-init.c
guest/scx-fuzz/bpf/: main.bpf.c
nix/: README.md  guest-kernel.nix  kernel.nix  module.nix  podman-initrd.nix  tests.nix  trivial-initrd.nix  userland.nix  vm.nix
nix/hosts/aws-r7i-metal/: default.nix  disko.nix
scripts/: determ-divergence.py  make-initrd.sh  pmi-skid-histogram.py
scripts/initrd/: Dockerfile  init
scripts/initrd-podman/: Dockerfile  compose.yaml  containers.conf  init  storage.conf
scripts/initrd-podman/bedrock-io/: bedrock-io.c
workloads/bitcoin/miner/: miner.c
workloads/btcd/: Dockerfile  btcd-launcher.sh  btcwallet-launcher.sh  build.sh  compose.yaml  libvoidstar.c  lnd-launcher.sh  ready.c  workload.sh
workloads/btcd/drivers/: best-hash-all  block-counts  btcd-decode-blob  btcd-rawtx-edge  eventually_chains_agree  lnd-channels  lnd-close-channel  lnd-decode-payreq  lnd-disconnect  lnd-dual-force-close  lnd-force-close  lnd-invoice-edge  lnd-node-info  lnd-open-channel  lnd-pay  lnd-sendpay-edge  lnd-update-policy  mempool-status  mine-blocks  peer-info  send-self  tx-counts  wallet-balance
workloads/btcd/genaddr/: main.go
workloads/btcd/gencert/: main.go
workloads/concurrency-fuzz/: build.sh  compose.yaml
workloads/concurrency-fuzz/fuzz/: Dockerfile  run.sh
workloads/redis/: build.sh  compose.yaml
workloads/redis/stress/: Dockerfile  ready.c  stress.py
workloads/redis/stress/drivers/: dbsize-all  flushall-and-init  pipeline-incr-counters  populate-hash  populate-zset  read-large-replica  read-replica-1  read-replica-2  repl-status  txn-init-accounts  txn-transfer-ab  txn-transfer-bc  type-confuse  write-large-value  wrong-replica-write
