[package]
name = "bedrock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the bedrock hypervisor"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
bedrock-vm = { path = "../bedrock-vm" }
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
goblin = "0.9"
log = "0.4"
serde_json = "1.0"
