[package]
name = "bedrock-ept"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extended Page Tables (EPT) implementation for x86-64 virtualization"

[dependencies]
memory = { package = "bedrock-memory", path = "../bedrock-memory" }
bedrock-log = { path = "../bedrock-log", default-features = false }

[features]
default = ["cargo"]
cargo = ["bedrock-log/cargo"]
